[package]
name = "auto-myrient"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
ferris-says = "0.3.1"
indicatif = "0.17.8"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
roxmltree = "0.20.0"
select = "0.6.0"
