[package]
name = "auto-myrient"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
indicatif = "0.17.8"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
retry = "2.0.0"
roxmltree = "0.20.0"
select = "0.6.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.arm-unknown-linux-musleabi.dependencies]
openssl = { version = "*", features = ["vendored"] }
